--- a/superwar/src/app/players/players.component.html
+++ b/superwar/src/app/players/players.component.html
@@ -3,9 +3,13 @@
   <div class="container">
     <div id="heroes" class="team">
     </div>
-    <div>
 
+    <div class="container">
+      <div class="score">
+        <p>5-0</p>
+      </div>
     </div>
+
     <div id="villains" class="team">
     </div>
   </div>
