--- a/superwar/src/app/players/players.component.css
+++ b/superwar/src/app/players/players.component.css
@@ -1,24 +1,23 @@
 .container {
   display: grid;
-  grid-template-columns: 48% 4% 48%;
+  grid-template-columns: 45% 10% 45%;
   grid-column-gap: 2em;
+  justify-content: center;
 }
 
 .team {
   display: flex;
   flex-wrap: wrap;
-}
-
-.team {
   padding: 4rem;
   text-align: center;
+  /* border: 2px solid black; */
 }
 
 .team#heroes {
   justify-content: flex-end;
 }
 
-.player {
+/* .player {
   border: 2px solid gray;
   border-radius: 5%;
   box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
@@ -35,12 +34,12 @@
 
 .player>.strength {
   font-size: 3em;
-}
+} */
 
-#score {
+.score {
   padding: 4rem;
-  font-size: 3em;
-  text-align: center;
+  font-size: 2em;
+  border: 2px solid red;
 }
 
 .footer {
